--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_play">PlayActivity</string>
-
+    <string name="play">Play!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--TODO TA Implementation-->
